[gd_scene load_steps=6 format=3 uid="uid://mw0ybdw4wsr8"]

[ext_resource type="Script" path="res://UI/Info.gd" id="1_8kntn"]
[ext_resource type="FontFile" uid="uid://wkorqfm7fonm" path="res://font/Bungee-Regular.ttf" id="2_c50mm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rdae2"]
bg_color = Color(0.380392, 0.352941, 0.345098, 0.941176)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.235294, 0.2, 0.192157, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="Theme" id="Theme_3qbvu"]
default_font = ExtResource("2_c50mm")

[sub_resource type="SystemFont" id="SystemFont_nsakh"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[node name="Info" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_8kntn")

[node name="intro" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -400.0
offset_right = 800.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rdae2")

[node name="margin" type="MarginContainer" parent="intro"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -695.0
offset_top = -311.0
offset_right = 695.0
offset_bottom = 311.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="Label" type="Label" parent="intro/margin"]
layout_mode = 2
size_flags_vertical = 0
text = "Intro"
horizontal_alignment = 1
vertical_alignment = 1

[node name="instructions" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -400.0
offset_right = 800.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rdae2")

[node name="margin" type="MarginContainer" parent="instructions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -695.0
offset_top = -311.0
offset_right = 695.0
offset_bottom = 311.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="Label" type="Label" parent="instructions/margin"]
layout_mode = 2
size_flags_vertical = 0
text = "Instructions"
horizontal_alignment = 1
vertical_alignment = 1

[node name="play" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -400.0
offset_right = 800.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rdae2")

[node name="margin" type="MarginContainer" parent="play"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -695.0
offset_top = -311.0
offset_right = 695.0
offset_bottom = 311.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="Label" type="Label" parent="play/margin"]
layout_mode = 2
size_flags_vertical = 0
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="previous" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 636.0
offset_top = -261.0
offset_right = 724.0
offset_bottom = -203.0
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "<-"

[node name="next" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -659.0
offset_top = -261.0
offset_right = -571.0
offset_bottom = -203.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "->"

[node name="CLOSE" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -326.0
offset_top = 165.0
offset_right = -209.0
offset_bottom = 251.0
grow_horizontal = 0
theme = SubResource("Theme_3qbvu")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="close_button" type="Button" parent="CLOSE"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_nsakh")
theme_override_font_sizes/font_size = 30
text = "X"

[connection signal="pressed" from="previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="CLOSE/close_button" to="." method="_on_close_button_pressed"]
